fixed wrong position of rating

--- a/templates/css/video_player.css
+++ b/templates/css/video_player.css
@@ -82,6 +82,7 @@
 {
     margin-top: 12px;
     float:right;
+    display:inline-block;
 }
 
 .description {
